feat(location): added location ping route and redis storage